--- a/assignment7/page2.html
+++ b/assignment7/page2.html
@@ -13,9 +13,9 @@
         </header>
         <nav>
             <ul>
-                <li><a href="assignment7.html" target="_blank">Welcome Page</a></li>
-                <li><a class="hokage" href="page2.html" target="_blank">About This Site</a></li>
-                <li><a href="page3.html" target="_blank">Gallery</a></li>
+                <li><a href="assignment7.html">Welcome Page</a></li>
+                <li><a class="hokage" href="page2.html">About This Site</a></li>
+                <li><a href="page3.html">Gallery</a></li>
                 <li><a class="substitution">Test</a></li>
             </ul>
         </nav>
