--- a/assignment10/Blank1200px.html
+++ b/assignment10/Blank1200px.html
@@ -3,6 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Welcome Page</title>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Uncial+Antiqua&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 	<link href="Blank1200px.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -27,8 +31,7 @@
 			</div>
 		</main>
 		<footer>
-			<a href="#">
-			<p>Get in touch!</p>
+			<p><a href="https://youtube.com/@kawaiishrekk?si=EgoFFbQ9sUhK_SZT" target="_blank" class="bi bi-youtube"></a></p>
 	</div>
 </body>
 </html>
