--- a/assignment10/Blank1200px.html
+++ b/assignment10/Blank1200px.html
@@ -13,10 +13,10 @@
 	<div id="wrapper">
 		<nav>
 			<ul>
-				<li class="water"><a href="#"><img src="homeicon.png"></a></li>
-				<li class="fire"><a href="#"><img src="abouticon.png"></a></li>
+				<li class="water"><a href="Blank1200px.html"><img src="homeicon.png"></a></li>
+				<li class="fire"><a href="about.html"><img src="abouticon.png"></a></li>
 				<li class="earth"><a href="#"><img src="musicicon.png"></a></li>
-				<li class="air"><a href="#"><img src="articon.png"></a></li>
+				<li class="air"><a href="art.html"><img src="articon.png"></a></li>
 			</ul>
 		</nav>
 		<header>
@@ -24,14 +24,14 @@
 		</header>
 		<main>
 			<iframe src="https://bandcamp.com/EmbeddedPlayer/album=233950843/size=large/bgcol=ffffff/linkcol=2ebd35/artwork=small/transparent=true/" seamless><a href="https://stevenjones11.bandcamp.com/album/toy-quest-ost-ctk-345-final">Toy Quest OST (CTK 345 Final) by Steven Jones</a></iframe>
-			<div>
+			<div class="elan">
 				<a href="#">
 				<h2>What's New?</h2>
 				<p>Update: 4/2/25</p>
 			</div>
 		</main>
 		<footer>
-			<p><a href="https://youtube.com/@kawaiishrekk?si=EgoFFbQ9sUhK_SZT" target="_blank" class="bi bi-youtube"></a></p>
+			<p><a href="https://youtube.com/@kawaiishrekk?si=EgoFFbQ9sUhK_SZT" target="_blank" class="bi bi-youtube"></a>  <a href="#" class="bi bi-twitter"></a></p>
 	</div>
 </body>
 </html>
