--- a/assignment10/Blank1200px.html
+++ b/assignment10/Blank1200px.html
@@ -3,11 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Welcome Page</title>
+	<link href="Blank1200px.css" rel="stylesheet" type="text/css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Uncial+Antiqua&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-	<link href="Blank1200px.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<div id="wrapper">
@@ -15,7 +15,7 @@
 			<ul>
 				<li class="water"><a href="Blank1200px.html"><img src="homeicon.png"></a></li>
 				<li class="fire"><a href="about.html"><img src="abouticon.png"></a></li>
-				<li class="earth"><a href="#"><img src="musicicon.png"></a></li>
+				<li class="earth"><a href="music.html"><img src="musicicon.png"></a></li>
 				<li class="air"><a href="art.html"><img src="articon.png"></a></li>
 			</ul>
 		</nav>
@@ -23,11 +23,11 @@
 			<h1>Featured Music</h1>
 		</header>
 		<main>
-			<iframe src="https://bandcamp.com/EmbeddedPlayer/album=233950843/size=large/bgcol=ffffff/linkcol=2ebd35/artwork=small/transparent=true/" seamless><a href="https://stevenjones11.bandcamp.com/album/toy-quest-ost-ctk-345-final">Toy Quest OST (CTK 345 Final) by Steven Jones</a></iframe>
+			<iframe class="bandcamp" src="https://bandcamp.com/EmbeddedPlayer/album=233950843/size=large/bgcol=ffffff/linkcol=2ebd35/artwork=small/transparent=true/" seamless><a href="https://stevenjones11.bandcamp.com/album/toy-quest-ost-ctk-345-final">Toy Quest OST (CTK 345 Final) by Steven Jones</a></iframe>
 			<div class="elan">
-				<a href="#">
-				<h2>What's New?</h2>
-				<p>Update: 4/2/25</p>
+				<a href="update.html">
+				<h2 class="squirrel">What's New?</h2>
+				<p class="squirrel">Update: 4/21/25</p>
 			</div>
 		</main>
 		<footer>
