--- a/assignment10/art.html
+++ b/assignment10/art.html
@@ -3,13 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Art</title>
+	<link href="Blank1200px.css" rel="stylesheet" type="text/css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Uncial+Antiqua&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css">
-	<link href="Blank1200px.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<div id="wrapper">
@@ -17,7 +17,7 @@
 			<ul>
 				<li class="water"><a href="Blank1200px.html"><img src="home2.png"></a></li>
 				<li class="fire"><a href="about.html"><img src="abouticon.png"></a></li>
-				<li class="earth"><a href="#"><img src="musicicon.png"></a></li>
+				<li class="earth"><a href="music.html"><img src="musicicon.png"></a></li>
 				<li class="air"><a href="art.html"><img src="art2.png"></a></li>
 			</ul>
 		</nav>
