--- a/assignment10/update.html
+++ b/assignment10/update.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Welcome Page</title>
+	<title>Update 4/21</title>
 	<link href="Blank1200px.css" rel="stylesheet" type="text/css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,17 +13,13 @@
 	<div id="wrapper">
 		<nav>
 			<ul>
-				<li class="water"><a href="Blank1200px.html"><img src="home2.png"></a></li>
-				<li class="fire"><a href="about.html"><img src="about2.png"></a></li>
-				<li class="earth"><a href="music.html"><img src="musicicon.png"></a></li>
-				<li class="air"><a href="art.html"><img src="articon.png"></a></li>
-			</ul>
+				<li class="water"><a href="Blank1200px.html"><img src="homeicon.png"></a></li>
 		</nav>
 		<header>
-			<h1>Who Am I?</h1>
+			<h1>New Post - Site Almost Finished!</h1>
 		</header>
 		<main>
-
+            <p class="markiplier"> Hello everybody, my name is Markiplier. I've been hard at work on this EPIC site, much like a little gnome or other woodland critter making some acorn-based trinket.
 		</main>
 		<footer>
 			<p><a href="https://youtube.com/@kawaiishrekk?si=EgoFFbQ9sUhK_SZT" target="_blank" class="bi bi-youtube"></a>  <a href="#" class="bi bi-twitter"></a></p>
