--- a/assignment10/about.html
+++ b/assignment10/about.html
@@ -23,6 +23,10 @@
 			<h1>Who Am I?</h1>
 		</header>
 		<main>
+			<img src="me and tayto.jpg" class="tayto">
+
+			<p class="blurble">Hello there, friend... My name is Steven. I'm a composer, producer, and artist. I made this website to show YOU all of the neat little things that I make. My dream, my goal, my One Piece is to work in video games, movies, and/or animation as a composer and sound designer. It might not be super obvious when listening, but my biggest inspirations are Koji Kondo, Nobuo Uematsu, and John Williams. If you haven't noticed, I've got a few nifty links at the bottom of this here page that can take you to my pages on other sites. Feel free to check them out or send me a message that I will DEFINITELY respond to...</p>
+			<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeqC4rPep_9-koo_xh-Bt5H5E9d2qB75zLgHmM0kM2_663D_g/viewform?embedded=true" width="640" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
 		</main>
 		<footer>
