--- a/assignment10/update.html
+++ b/assignment10/update.html
@@ -19,7 +19,7 @@
 			<h1>New Post - Site Almost Finished!</h1>
 		</header>
 		<main>
-            <p class="markiplier"> Hello everybody, my name is Markiplier. I've been hard at work on this EPIC site, much like a little gnome or other woodland critter making some acorn-based trinket.
+            <p class="blurble"> Hello everybody, my name is Markiplier. I've been hard at work on this EPIC site, much like a little gnome or other woodland critter making some acorn-based trinket.
 		</main>
 		<footer>
 			<p><a href="https://youtube.com/@kawaiishrekk?si=EgoFFbQ9sUhK_SZT" target="_blank" class="bi bi-youtube"></a>  <a href="#" class="bi bi-twitter"></a></p>
