--- a/assignment10/Blank1200px.html
+++ b/assignment10/Blank1200px.html
@@ -31,7 +31,7 @@
 			</div>
 		</main>
 		<footer>
-			<p><a href="https://youtube.com/@kawaiishrekk?si=EgoFFbQ9sUhK_SZT" target="_blank" class="bi bi-youtube"></a>  <a href="#" class="bi bi-twitter"></a></p>
+			<p><a href="https://youtube.com/@kawaiishrekk?si=EgoFFbQ9sUhK_SZT" target="_blank" class="bi bi-youtube"> YouTube</a></p>
 	</div>
 </body>
 </html>
