--- a/assignment10/update.html
+++ b/assignment10/update.html
@@ -13,7 +13,7 @@
 	<div id="wrapper">
 		<nav>
 			<ul>
-				<li class="water"><a href="Blank1200px.html"><img src="homeicon.png"></a></li>
+				<li class="water"><a href="Blank1200px.html"><img src="home2.png"></a></li>
 		</nav>
 		<header>
 			<h1>New Post - Site Almost Finished!</h1>
@@ -22,7 +22,7 @@
             <p class="blurble"> Hello everybody, my name is Markiplier. I've been hard at work on this EPIC site, much like a little gnome or other woodland critter making some acorn-based trinket.
 		</main>
 		<footer>
-			<p><a href="https://youtube.com/@kawaiishrekk?si=EgoFFbQ9sUhK_SZT" target="_blank" class="bi bi-youtube"></a>  <a href="#" class="bi bi-twitter"></a></p>
+			<p><a href="https://youtube.com/@kawaiishrekk?si=EgoFFbQ9sUhK_SZT" target="_blank" class="bi bi-youtube"> YouTube</a></p>
 	</div>
 </body>
 </html>
