--- a/assignment10/about.html
+++ b/assignment10/about.html
@@ -30,7 +30,7 @@
 
 		</main>
 		<footer>
-			<p><a href="https://youtube.com/@kawaiishrekk?si=EgoFFbQ9sUhK_SZT" target="_blank" class="bi bi-youtube"> YouTube</a></p>
+			<p><a href="https://youtube.com/@kawaiishrekk?si=EgoFFbQ9sUhK_SZT" target="_blank" class="bi bi-youtube"> YouTube</a>&nbsp;&nbsp;<a href="https://stevenjones11.bandcamp.com" target="_blank" class="bi bi-music-note">Bandcamp</a></p>
 	</div>
 </body>
 </html>
