--- a/assignment10/update.html
+++ b/assignment10/update.html
@@ -22,7 +22,7 @@
             <p class="blurble"> Hello everybody, my name is Markiplier. I've been hard at work on this EPIC site, much like a little gnome or other woodland critter making some acorn-based trinket.
 		</main>
 		<footer>
-			<p><a href="https://youtube.com/@kawaiishrekk?si=EgoFFbQ9sUhK_SZT" target="_blank" class="bi bi-youtube"> YouTube</a></p>
+			<p><a href="https://youtube.com/@kawaiishrekk?si=EgoFFbQ9sUhK_SZT" target="_blank" class="bi bi-youtube"> YouTube</a>&nbsp;&nbsp;<a href="https://stevenjones11.bandcamp.com" target="_blank" class="bi bi-music-note">Bandcamp</a></p>
 	</div>
 </body>
 </html>
